services: Add comments for designrequests
